ecmascript/parser/tests/test262-error-references/fail/7291411fc225eabd.js.stderr
error: Identifier cannot follow number
 --> $DIR/tests/test262-parser/fail/7291411fc225eabd.js:1:3
  |
1 | 1.a
  |   ^

